--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.3",
     "react-scripts": "5.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
